# BookExpertRAG

./: .env.example  README.md  pyproject.toml  requirements.txt
src/: config.py  ingest.py  main.py  query.py
