[project]
name = "document-qa-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "chromadb>=0.4.22",
    "fastapi>=0.116.0",
    "google-genai>=2.8.0",
    "google-generativeai>=0.3.0",
    "langchain>=1.3.9",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-google-genai>=1.0.0",
    "pypdf>=4.0.0",
    "python-docx>=1.1.0",
    "python-dotenv>=1.0.1",
    "streamlit>=1.30.0",
    "tqdm>=4.66.0",
    "uvicorn[standard]>=0.35.0",
]
